# spectacle-toolbelt

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-request.yml  scrolling-failure.yml  stitching-artifact.yml
desktop/: io.github.ryanwinkler.spectacle-toolbelt-copy-markdown.desktop  io.github.ryanwinkler.spectacle-toolbelt-redact.desktop  io.github.ryanwinkler.spectacle-toolbelt-scroll.desktop  io.github.ryanwinkler.spectacle-toolbelt-transform.desktop  io.github.ryanwinkler.spectacle-toolbelt-web-fullpage.desktop  io.github.ryanwinkler.spectacle-toolbelt.desktop
docs/integration/: kde-shortcuts.md  service-menus.md  spectacle-feature-map.md  ux-flow-scrolling-capture.md
docs/plans/: 2026-04-24-kde-native-integration-implementation.md  2026-04-24-visible-capture-ux-implementation.md
docs/specs/: 2026-04-24-kde-native-integration-design.md  2026-04-24-snagit-grade-scrolling-and-fullpage-capture-design.md
docs/upstream/: spectacle-native-scrolling-capture-proposal.md
scripts/: install-local.sh  uninstall-local.sh
servicemenus/: io.github.ryanwinkler.spectacle-toolbelt-open-in-spectacle.desktop  io.github.ryanwinkler.spectacle-toolbelt-stitch.desktop
src/spectacle_toolbelt/: __init__.py  cli.py  diagnostics.py
src/spectacle_toolbelt/capture/: __init__.py  area.py  (+1 more)
tests/: test_capture_area.py  test_cli.py  test_diagnostics.py  test_dialogs.py  test_editor_handoff.py  test_output_files.py  test_region_selector.py  test_scroll_controller.py  test_service_menu_install.py  test_stitch_engine.py  test_web_fullpage.py
(+16 files in other folders)
